Update fixes background, font and alignment

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,15 +2,25 @@ html {
     position: relative;
     min-height: 100%;
   }
-  body {
-    margin-bottom: 60px; /* Margin bottom by footer height */
-    background-image: url("../assets/images/ep_naturalblack.png");
-  }
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
-  }
+
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+  background-image: url("../images/ep_naturalblack.png");
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+h2, h3 {
+  color: #4aaaa5;
+}
+
+p {
+  color: #777777;
+}
